--- a/app.json
+++ b/app.json
@@ -1,22 +1,22 @@
-
+{
   "name" : " LøseØnlineRobot " ,
   "logo" : " https://telegra.ph/file/50c0103e4548eaae95e4d.jpg " ,
   "description" : " LøseØnlineBot bot sıze ucretsız uyelerinizi etiketleyen bir bottur. " ,
   "env" : {
     "TOKEN" : {
       "description" : " bot token girin. " ,
-      "değer" : " "
+      "value" : " "
     },
     "APP_ID" : {
       "description" : " @otomytelegrambot dan api hash api kimliği alınız. @LoseOnlineRobot'a ortak çalışsın " ,
-      "değer" : " "
+      "value" : " "
     },
     "API_HASH" : {
       "description" : " @otomytelegrambot dan api hash api kimliği alınız. " ,
-      "değer" : " "
+      "value" : " "
     }
   },
-  "yapı paketleri" : [{
+  "buildpacks" : [{
     "url" : " https://github.com/heroku/heroku-buildpack-python.git "
   }]
 }
