--- a/app.json
+++ b/app.json
@@ -17,6 +17,6 @@
     }
   },
   "buildpacks" : [{
-    "url" : " https://github.com/heroku/heroku-buildpack-python.git "
+    "url" : " heroku/python "
   }]
 }
